tests/type-error/TypeMismatch2.vix
test : Int
test x = x
